language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_redundant_list_prepend_const.snap
---
source: language-server/src/tests/action.rs
expression: "const wibble = [1]\nconst wobble = [..wibble]"
---
----- BEFORE ACTION
const wibble = [1]
const wobble = [..wibble]
                ↑        


----- AFTER ACTION
const wibble = [1]
const wobble = wibble
