language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_redundant_list_prepend_const_literal.snap
---
source: language-server/src/tests/action.rs
expression: "const wobble = [..[1]]"
---
----- BEFORE ACTION
const wobble = [..[1]]
                ↑     


----- AFTER ACTION
const wobble = [1]
