language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_redundant_list_prepend_empty.snap
---
source: language-server/src/tests/action.rs
expression: "const wibble = [..[]]"
---
----- BEFORE ACTION
const wibble = [..[]]
                ↑    


----- AFTER ACTION
const wibble = []
