language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_redundant_list_prepend_intermittent_nested_outer.snap
---
source: language-server/src/tests/action.rs
expression: "const wibble = [..[..[1, 2, ..[]]]]"
---
----- BEFORE ACTION
const wibble = [..[..[1, 2, ..[]]]]
               ↑                   


----- AFTER ACTION
const wibble = [..[1, 2, ..[]]]
