language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_redundant_list_prepend_variable_literal.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let wibble = [..[1]]\n}"
---
----- BEFORE ACTION
pub fn main() {
  let wibble = [..[1]]
                ↑     
}


----- AFTER ACTION
pub fn main() {
  let wibble = [1]
}
